--- a/src/block/footer/footer.css
+++ b/src/block/footer/footer.css
@@ -1,13 +1,68 @@
 .footer {
   background: rgb(245, 245, 245);
-  padding-top: 55px;
-  padding-bottom: 55px;
   border-radius: 20px;
   margin-top: 120px;
+  margin-bottom: 30px;
 }
 @media screen and (max-width: 768px) {
   .footer {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+}
+.footer__container {
+  padding: 40px;
+}
+
+.footer__left {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 14px;
+  color: #1a1a1a;
+}
+
+.footer__logo {
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.footer__left a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer__socials {
+  display: flex;
+  gap: 15px;
+  margin-top: 15px;
+}
+
+.footer__socials a {
+  font-size: 18px;
+  color: #000;
+  transition: 0.3s;
+}
+
+.footer__socials a:hover {
+  color: #888;
+}
+
+.footer__nav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: flex-end;
+}
+
+.footer__nav a {
+  text-decoration: none;
+  font-size: 14px;
+  color: #1a1a1a;
+  transition: 0.3s;
+}
+
+.footer__nav a:hover {
+  color: #666;
 }
