--- a/src/block/header/__menu/__item/-whapp/h-menu__item-whapp.css
+++ b/src/block/header/__menu/__item/-whapp/h-menu__item-whapp.css
@@ -7,7 +7,7 @@
     }
   }
   .whapp__btn {
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background-image: linear-gradient(135deg, #7e9cc9 0%, #000000 100%);
     color: #fff;
     text-align: center;
     border-radius: 4px;
