--- a/src/block/header/__wrap/header__wrap.css
+++ b/src/block/header/__wrap/header__wrap.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 10px;
+    padding: 35px 0;
 }
 .para {
     padding:100px 0 0 0;
