--- a/src/block/app/App.css
+++ b/src/block/app/App.css
@@ -1029,8 +1029,9 @@ button:hover {
 }
 
 .PP__modal-image {
-  max-width: 90vw;
-  max-height: 90vh;
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
   object-fit: contain;
   z-index: 1001;
 }
@@ -1069,6 +1070,79 @@ button:hover {
 }
 
 .PP__modal-next {
+  right: 20px;
+}
+
+/*Ph-Gallery*/
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
+  padding: 20px;
+}
+.gallery__title {
+  font-size: 48px;
+}
+.gallery-img {
+  width: 100%;
+  height: 440px;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: transform 0.3s;
+}
+
+.Ph__gallery {
+  margin-top: 80px;
+  margin-bottom: 140px;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+
+}
+
+.modal-img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  font-size: 36px;
+  color: white;
+  cursor: pointer;
+}
+
+.modal-prev,
+.modal-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 36px;
+  color: white;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.modal-prev {
+  left: 20px;
+}
+
+.modal-next {
   right: 20px;
 }
 
@@ -1236,6 +1310,9 @@ button:hover {
       padding: 23px;
     }
     .contact-modern__title {
+      font-size: 32px;
+    }
+    .gallery__title {
       font-size: 32px;
     }
 }
