--- a/src/block/header/__menu/header__menu.css
+++ b/src/block/header/__menu/header__menu.css
@@ -4,7 +4,7 @@
     left: 0;
     top: -100%;
     width: 100%;
-    height: 33%;
+    height: 270px;
     z-index: 3;
     background-color: #fff;
     padding-top: 20px;
